appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionEmptyState::AddButton::RoundButton"
    direction: DOWN
    speed: 99
    centerElement: true
    label: "Scroll to nutrition section"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionEmptyState::AddButton::RoundButton"
    label: "Tap add nutrition button"

- runFlow:
    file: "../../../flows/recipe/adding/manual/en/tryAddEmpty.yaml"
    label: "Try to validate with incomplete nutrition"

- runFlow:
    file: "../../../asserts/alerts/en/recipeValidationError.yaml"
    env:
      MISSING_ELEMENTS: "\n\t- an image\n\t- a title\n\t- some ingredients\n\t- some instructions for the preparation\n\t- complete nutrition information"
    label: "Assert validation error includes nutrition"

- runFlow:
    file: "../../../flows/recipe/editing/addPartialNutrition.yaml"
    label: "Add partial nutrition data"

- runFlow:
    file: "../../../flows/recipe/adding/manual/en/tryAddEmpty.yaml"
    label: "Try to validate with incomplete nutrition"

- runFlow:
    file: "../../../asserts/alerts/en/recipeValidationError.yaml"
    env:
      MISSING_ELEMENTS: "\n\t- an image\n\t- a title\n\t- some ingredients\n\t- some instructions for the preparation\n\t- complete nutrition information"
    label: "Assert validation error includes nutrition"

- runFlow:
    file: "../../../flows/recipe/editing/completeSaturatedFat.yaml"
    label: "Fill saturated fat field"

- runFlow:
    file: "../../../flows/recipe/adding/manual/en/tryAddEmpty.yaml"
    label: "Try to validate again"

- runFlow:
    file: "../../../asserts/alerts/en/recipeValidationError.yaml"
    env:
      MISSING_ELEMENTS: "\n\t- an image\n\t- a title\n\t- some ingredients\n\t- some instructions for the preparation\n\t- complete nutrition information"
    label: "Assert validation error still includes nutrition (missing portion weight)"

- runFlow:
    file: "../../../flows/recipe/editing/completePortionWeight.yaml"
    label: "Fill portion weight to complete nutrition"

- runFlow:
    file: "../../../flows/recipe/adding/manual/en/tryAddEmpty.yaml"
    label: "Try to validate with complete nutrition"

- runFlow:
    file: "../../../asserts/alerts/en/recipeValidationError.yaml"
    env:
      MISSING_ELEMENTS: "\n\t- an image\n\t- a title\n\t- some ingredients\n\t- some instructions for the preparation"
    label: "Assert validation error NO LONGER includes nutrition"


- scrollUntilVisible:
    element:
      id: "RecipeImage"
    direction: UP
    centerElement: true
    speed: 99
    label: "Scroll back to top"
