appId: "com.recipedia"
env:
  recipeName: "Sushi Rolls"
---
- tapOn:
    id: "BottomTabs::Home"
    label: "Navigate to Home screen"

- runFlow:
    file: "../../flows/home/swipelToRecipeAndOpenIt.yaml"
    env:
      recipeName: ${recipeName}
    label: "Swipe Home screen until recipe is found"

- runFlow:
    file: "../../asserts/recipe/readonly/en/sushiRolls.yaml"
    label: "Assert Sushi Rolls recipe is displayed correctly"

- tapOn:
    id: "RecipeEdit::RoundButton"
    waitToSettleTimeoutMs: 0
    retryTapIfNoChange: false
    label: "Tap on the Edit button"

- runFlow:
    file: "../../asserts/recipe/edit/sushiRolls.yaml"
    label: "Assert Sushi Rolls edit screen is displayed correctly"

- runFlow:
    file: "../../flows/recipe/editing/removeNutrition.yaml"
    label: "Remove nutrition table"

- runFlow:
    file: "../../asserts/recipe/common/nutritionEmptyEdit.yaml"
    label: "Assert nutrition section is now empty with add button"

- tapOn:
    id: "RecipeValidate"
    label: "Validate the modifications"

- runFlow:
    file: "../../asserts/recipe/readonly/en/sushiRollsEmpty.yaml"
    label: "Assert modified Sushi Rolls recipe without nutrition is displayed correctly"

- runFlow:
    file: "../../flows/recipe/editing/fillNutritionBackSushi.yaml"
    label: "Remove nutrition table"

- tapOn:
    id: "BackButton::RoundButton"
    label: "Back to the Home Screen"


- runFlow:
    file: "../../flows/home/swipeBackToFirstCard.yaml"
    label: "Replace the cards to theirs original position"
