appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Navigate to Search screen"

- scrollUntilVisible:
    element:
      text: "Pesto Pasta"
    direction: DOWN
    speed: 40
    label: "Scroll to find Pesto Pasta"

- tapOn:
    text: "Pesto Pasta"
    label: "Open Pesto Pasta recipe"

- runFlow:
    file: "../../asserts/recipe/readonly/en/pestoPasta.yaml"
    label: "Assert Pesto Pasta recipe is displayed correctly"

- tapOn:
    id: "RecipeEdit::RoundButton"
    waitToSettleTimeoutMs: 0
    retryTapIfNoChange: false
    label: "Tap on the Edit button"

- runFlow:
    file: "../../asserts/recipe/edit/pestoPasta.yaml"
    label: "Assert Pesto Pasta edit screen is displayed correctly"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::Title"
    direction: DOWN
    speed: 60
    label: "Scroll back to top of nutrition part"

- runFlow:
    file: "../../flows/recipe/editing/editNutrition.yaml"
    env:
      NEW_ENERGY_KCAL: "450"
      NEW_PROTEIN: "18"
      NEW_FAT: "17"
    label: "Edit nutrition values"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::Title"
    direction: UP
    speed: 60
    label: "Scroll back to top of nutrition part"

# TODO missing an assert before going back

- runFlow:
    file: "../../flows/recipe/editing/editNutrition.yaml"
    env:
      NEW_ENERGY_KCAL: "425"
      NEW_PROTEIN: "16.5"
      NEW_FAT: "15.8"
    label: "Revert nutrition values"

- tapOn:
    id: "BackButton::RoundButton"
    label: "Back to the Search Screen"

- scrollUntilVisible:
    element:
      id: "SearchScreen::SearchBar"
    direction: UP
    speed: 99
    label: "Scroll back to top of Search screen"

- tapOn:
    id: "BottomTabs::Home"
    label: "Back to the Home Screen"
