appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Navigate to Search screen"

- tapOn:
    id: "SearchScreen::RecipeCards::1"
    label: "Open Chicken Tacos recipe"

- runFlow:
    file: "../../asserts/recipe/readonly/en/chickenTacos.yaml"
    label: "Assert Chicken Tacos recipe is displayed correctly"

- tapOn:
    id: "BackButton::RoundButton"
    label: "Back to the Search Screen"

- runFlow:
    file: "../../asserts/search/en/assertSearchScreen.yaml"
    label: "Assert Search screen is displayed"

- tapOn:
    id: "BottomTabs::Home"
    label: "Navigate back to Home screen"
