name: "10 - Filters With Text Search Flow"
appId: "com.recipedia"
tags:
  - search
---
- runFlow:
    file: "../../flows/setupTest.yaml"
    label: "Setup - Launch app and wait for ready"

- tapOn:
    id: "BottomTabs::Search"
    label: "Action - Navigate to Search screen"

- tapOn:
    id: "SearchScreen::SearchBar"
    label: "Action - Open Search Bar"

- inputText:
    text: "Ca"
    label: "Action - Input text 'Ca' in the Bar"

- pressKey: "enter"

- runFlow:
    file: "../../asserts/search/en/searchScreenFilteredOnCa.yaml"
    label: "Assert - Verify filter view with Ca"

- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Action - Open the filter page"

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::2"
    label: "Action - Tap on Tags category to select an element inside"

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::2::Item::0"
    label: "Action - Select tag Chocolate as filter"

- runFlow:
    file: "../../asserts/search/en/filters/filtersViewFilteredOnCaAndChocolate.yaml"
    label: "Assert - Verify filter view with Ca and Chocolate"

- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Action - Close the filter page"

- runFlow:
    file: "../../asserts/search/en/searchScreenFilteredOnCaAndChocolate.yaml"
    label: "Assert - Verify search results filtered on Ca and Chocolate"

- tapOn:
    id: "SearchScreen::FiltersSelection::1::Chip"
    label: "Action - Remove Chocolate filter"

- tapOn:
    id: "SearchScreen::FiltersSelection::0::Chip"
    label: "Action - Remove 'Ca' text filter"

- tapOn:
    id: "BottomTabs::Home"
    label: "Cleanup - Navigate back to Home screen"
