name: "7 - Filter Page Toggle Flow"
appId: "com.recipedia"
tags:
  - search
---
- runFlow:
    file: "../../flows/setupTest.yaml"
    label: "Setup - Launch app and wait for ready"

- tapOn:
    id: "BottomTabs::Search"
    label: "Action - Navigate to Search screen"

- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Action - Open the filter page"

- runFlow:
    file: "../../asserts/search/en/filters/filtersViewNoFilter.yaml"
    label: "Assert - Verify filter view with no filters applied"

- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Action - Close the filter page"

- tapOn:
    id: "BottomTabs::Home"
    label: "Cleanup - Navigate back to Home screen"
