appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Navigate to Search screen"

- tapOn:
    id: "SearchScreen::SearchBar"
    label: "Focus on search bar"

- hideKeyboard:
    label: "Dismiss keyboard"

- tapOn:
    text: "Lentil Curry"
    label: "Click directly on Lentil Curry from dropdown"

- runFlow:
    file: "../../asserts/search/en/searchScreenFilteredOnLentilCury.yaml"
    label: "Assert Search screen shows filtered results for Lentil Curry"

- tapOn:
    id: "SearchScreen::SearchBar::RightIcon"
    label: "Tap clear icon to remove search filter"

- runFlow:
    file: "../../asserts/search/en/assertSearchScreen.yaml"
    label: "Assert all recipe cards are visible again"

- tapOn:
    id: "BottomTabs::Home"
    label: "Navigate back to Home screen"
