appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Navigate to Search screen"

- tapOn:
    id: "SearchScreen::SearchBar"
    label: "Focus on search bar"

- inputText: "Lentil"

- hideKeyboard:
    label: "Dismiss keyboard"

- runFlow:
    file: "../../asserts/search/searchbar/searchBarFilteredOnLentil.yaml"
    label: "Assert dropdown filtered on 'Lentil'"

- pressKey: "enter"

- runFlow:
    file: "../../asserts/search/en/searchScreenFilteredOnLentilCury.yaml"
    label: "Assert Search screen shows filtered results for Lentil Curry"

- tapOn:
    id: "SearchScreen::FiltersSelection::0::Chip"
    label: "Tap filter chip to remove filter"

- runFlow:
    file: "../../asserts/search/en/assertSearchScreen.yaml"
    label: "Assert all recipe cards are visible again"

- tapOn:
    id: "BottomTabs::Home"
    label: "Navigate back to Home screen"
